# Bookmark-Manager

./: .gitignore  Dockerfile  README.md  bookmarks.db  pyproject.toml
src/bookmark_manager/: database.py  main.py  models.py
src/bookmark_manager/api/: routes.py
src/bookmark_manager/static/: index.html
tests/: test_main.py
