[project]
name = "bookmark-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arafat Islam", email = "arafatislam247@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.2",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]

[project.scripts]
bookmark-manager = "bookmark_manager:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "httpx2>=0.1.0",
    "pytest>=9.1.0",
    "ruff>=0.15.18",
]

[tool.uv]
package = false